# FengtouPlayer

./: build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wenfengtou/fengtouplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wenfengtou/fengtouplayer/: FFmpegDrawActivity.java  MainActivity.java  OpenglActivity.java
app/src/main/java/com/wenfengtou/fengtouplayer/view/: MyVideoView.java
app/src/main/res/layout/: activity_ffmpeg_draw.xml  activity_main.xml  activity_opengl.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wenfengtou/fengtouplayer/: ExampleUnitTest.java
ffmpeglib/: CMakeLists.txt  build.gradle
ffmpeglib/src/androidTest/java/com/wenfengtou/ffmpeg_lib/: ExampleInstrumentedTest.java
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: FFmpegNativeUtil.cpp  hello.cpp
ffmpeglib/src/main/java/com/wenfengtou/ffmpeglib/: FFmpegNativeUtil.java  HelloJniHelper.java
ffmpeglib/src/test/java/com/wenfengtou/ffmpeg_lib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ijkplayerlib/: build.gradle
opengllib/: build.gradle
opengllib/src/androidTest/java/com/wenfengtou/opengllib/: ExampleInstrumentedTest.java
opengllib/src/main/: AndroidManifest.xml
opengllib/src/main/java/com/wenfengtou/opengllib/: BufferUtil.java  FengtouRender.java  FengtouSurfaceView.java  TriggerRender.java
opengllib/src/main/res/values/: strings.xml
opengllib/src/test/java/com/wenfengtou/opengllib/: ExampleUnitTest.java
rtsplib/: CMakeLists.txt  build.gradle
rtsplib/src/androidTest/java/com/wenfengtou/rtsplib/: ExampleInstrumentedTest.java
rtsplib/src/main/: AndroidManifest.xml
rtsplib/src/main/cpp/: rtsp-client.c  rtspclient_v1.0.c
rtsplib/src/main/cpp/include/: rtsp-client.h
rtsplib/src/main/java/com/wenfengtou/rtsplib/: RtspClient.java
rtsplib/src/main/res/values/: strings.xml
rtsplib/src/test/java/com/wenfengtou/rtsplib/: ExampleUnitTest.java
